syntax = "proto3";

package executor.v1;

option go_package = "go-code-runner-microservice/proto/executor/v1;executorpb";

service ExecutorService {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse);
}

message ExecuteRequest {
  string language = 1;
  string code = 2;
  int32 problem_id = 3;
}

message ExecuteResponse {
  bool success = 1;
  string job_id = 2;
  string message = 3;
  string error = 4;
}

message GetJobStatusRequest {
  string job_id = 1;
}

message GetJobStatusResponse {
  bool success = 1;
  string job_id = 2;
  string status = 3;
  string output = 4;
  string error = 5;
  repeated TestResult test_results = 6;
}

message TestResult {
  int32 test_case_id = 1;
  string input = 2;
  string expected_output = 3;
  string actual_output = 4;
  string error = 5;
  bool passed = 6;
}